# mpc-wallet

./: .env.production  .env.production.template  .env.test  .gitignore  24h-monitoring.sh  AUTOMATION_ROADMAP.md  CI_CD_IMPROVEMENT_SUMMARY.md  CI_TRIGGER.md  DEPLOYMENT_CHECKLIST.md  Makefile  Makefile.backup  Makefile.fix  README-CN-MIRROR.md  README.md  deploy-prod.sh  deploy-production.sh  deployment-status.sh  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test-local.yml  docker-compose.test-minimal.yml  docker-compose.test.yml  docker-compose.yml  docker-daemon.json  health-check.sh  monitoring-setup.sh  package-lock.json  package.json  performance-tuning.sh  performance_test.js  security-hardening.sh  security_audit_report.md  test-deployment.sh  test-e2e.js  test_e2e.sh  test_e2e_api.py  test_e2e_real.py  test_e2e_simple.sh  test_final_report.sh  (+4 more)
backup/: backup-strategy.md
blockchain-middleware/: .env.production  .env.production.template  Dockerfile  Dockerfile.dev  Dockerfile.test  go.mod  go.sum
dev/: reset-test-containers.sh  start-test-containers.sh  status-test-containers.sh  stop-test-containers.sh  开发指南.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  UI_DESIGN_GUIDE.md
frontend-mobile/: README.md  TEST_CHECKLIST.md  app.json  babel.config.js  metro.config.js  package.json  test-mobile.js  test-setup.sh  tsconfig.json
frontend-web/: .npmrc  Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
infrastructure/: README.md
monitoring/: alert_rules.yml  alerts.yml  prometheus.yml
mpc-core/: Cargo.toml  Dockerfile  Dockerfile.dev
mpc-core/scripts/: mpc-integration-test.sh
mpc-core/src/: crypto.rs  error.rs  key_management.rs  lib.rs  main.rs  protocol.rs  security.rs  server.rs  types.rs
mpc-core/tests/: integration_test.rs
(+280 files in other folders)
