[package]
name = "mpc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k256 = "0.13"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
tracing-subscriber = "0.3"

[features]
sgx = []
hsm = []

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"